--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,5 @@ cython_debug/
 *.npz
 data/rdk_70_30_2afc/feedforward_only/lo_coh/._decode_choice.png
 *.png
+data/rdk_70_30_6afc/feedforward_only/.DS_Store
+data/rdk_70_30_6afc/.DS_Store
