--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,13 @@ data/rdk_70_30_6afc/feedforward_only/.DS_Store
 data/rdk_70_30_6afc/.DS_Store
 .virtual_documents/generate_trials.ipynb
 .virtual_documents/decode_L1.ipynb
+data/.DS_Store
+data/rdk_70_30_2afc/.DS_Store
+data/rdk_70_30_2afc/feedforward_only/.DS_Store
+*.DS_Store
+data/rdk_70_30_6afc/feedforward_only/.DS_Store
+data/rdk_70_30_6afc/.DS_Store
+data/rdk_70_30_2afc/feedforward_only/.DS_Store
+data/rdk_70_30_2afc/.DS_Store
+data/rdk_70_30_6afc/feedforward_only/.DS_Store
+.DS_Store
