5/31 exp vs unexp
calculated decoding accuracy by class using confusion matrix

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,4 @@ data/rdk_70_30_2afc/feedforward_only/.DS_Store
 data/rdk_70_30_2afc/.DS_Store
 data/rdk_70_30_6afc/feedforward_only/.DS_Store
 .DS_Store
+/.virtual_documents
