--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,7 @@ data/rdk_70_30_6afc/feedforward_only/.DS_Store
 .DS_Store
 /.virtual_documents
 /.virtual_documents
+data/.DS_Store
+/data
+*.ipynb
+/.virtual_documents
